# agent-tools-claude

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: demo.spec.ts
frontend/src/: App.vue  style.css
frontend/src/components/: LandingPage.vue
frontend/src/components/admin/: AdminHeader.vue  ConnectionStatus.vue  DebugPanel.vue
frontend/src/components/calendar/: CalendarView.vue
frontend/src/components/chat/: ChatPanel.vue
frontend/src/components/list/: AppointmentList.vue
frontend/src/composables/: useAdminWebSocket.ts  useDemoMode.ts  useVoice.ts  useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/stores/: appointments.ts  chat.ts  debug.ts
frontend/src/types/: index.ts
frontend/src/views/: AdminView.vue  DemoView.vue
scripts/: run-demo.sh
src/agent_demos/: __init__.py
src/agent_demos/core/: __init__.py  claude_client.py  exceptions.py
src/agent_demos/demos/: __init__.py
src/agent_demos/scheduling/: __init__.py  agent.py  calendar.py  tools.py
src/agent_demos/voice/: __init__.py  agent.py  stt.py  tts.py  web_adapter.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_appointments_api.py  test_rate_limit.py  test_websocket_auth.py  test_websocket_chat.py  test_websocket_voice.py
tests/unit/: __init__.py  test_chat_service.py  test_connection_manager.py  test_models.py  test_notification_service.py  test_rate_limit.py  test_voice_service.py
(+24 files in other folders)
